--- a/config/database.yml
+++ b/config/database.yml
@@ -4,19 +4,25 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  username: ask
+  password:
   pool: 5
-  timeout: 5000
+  database: ask_development
+  host: localhost
+  encoding: utf8
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  username: ask
+  password:
   pool: 5
-  timeout: 5000
+  encoding: utf8
+  database: ask_test
+  host: localhost
 
 production:
   adapter: sqlite3
